# ATS_BD_PROJECT

./: .env.example  .gitignore  README.md
docs/: architecture.md  implementation-roadmap.md  session-handoff.md  windows-to-ubuntu-migration.md
infra/: docker-compose.yml
services/api/: Dockerfile  README.md  pyproject.toml
services/api/src/ats_api/: __init__.py  __main__.py  app.py  config.py  repository.py
services/api/tests/: test_app.py
services/embedding/: README.md  pyproject.toml
services/embedding/src/ats_embedding/: __init__.py  __main__.py  cli.py  config.py  consumer.py  embeddings.py  faiss_index.py  jd_ingestion.py  models.py  pipeline.py  repository.py
services/embedding/tests/: test_incremental_pipeline.py  test_jd_ingestion.py
services/frontend/: README.md  index.html  package-lock.json  package.json
services/frontend/src/: App.jsx  styles.css
services/ingestion/: README.md  pyproject.toml
services/ingestion/src/ats_ingestion/: __init__.py  __main__.py  app.py  check_resume_ids.py  config.py  publisher.py  storage.py
services/ingestion/tests/: test_app.py
services/parser/: README.md  pyproject.toml
services/parser/src/ats_parser/: __init__.py  __main__.py  cli.py  config.py  consumer.py  extractors.py  models.py  parser.py  persistence.py  pipeline.py  reporting.py
services/parser/tests/: test_config.py  test_parser.py
services/ranking/: README.md  pyproject.toml
services/ranking/examples/: relevance_labels.example.jsonl
services/ranking/src/ats_ranking/: __init__.py  __main__.py  cli.py  consumer.py  evaluation.py  features.py  labels.py  ml.py  offline_cli.py  pipeline.py  repository.py  signals.py
services/ranking/tests/: test_evaluation.py  test_features.py
shared/: README.md  pyproject.toml
shared/src/ats_shared/: __init__.py
shared/src/ats_shared/events/: __init__.py  kafka.py  topics.py
