[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ats-shared"
version = "0.1.0"
description = "Shared helpers for the ATS monorepo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "confluent-kafka>=2.6.0,<3.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
