[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ats-ingestion-service"
version = "0.1.0"
description = "Ingestion helpers for the ATS monorepo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]

[project.scripts]
ats-ingestion-api = "ats_ingestion.app:main"
ats-ingestion-publish = "ats_ingestion.publisher:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
